--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.56.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
